<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <EditText
        android:id="@+id/ediadnum"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/bacgerundedittext"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textPersonName"
        android:hint="@string/number"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/ediadname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/bacgerundedittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toEndOf="@+id/ediadnum"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/ediadpassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:background="@drawable/bacgerundedittext"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/ediadname"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnadsaqlash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bacgerundedittext"
        android:text="@string/saqlash"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <Button
        android:id="@+id/btnadrole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bacgerundedittext"
        android:text="@string/role"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <Button
        android:id="@+id/btnadall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bacgerundedittext"
        android:text="@string/read_all_users"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/btnadsaqlash" />

</androidx.constraintlayout.widget.ConstraintLayout>